tests222/tests2/test48.out
lli: <stdin>:1:1: error: expected top-level entity
line 1: function x is not defined
^
